undo spacing changes due to bug

--- a/common/common.scss
+++ b/common/common.scss
@@ -68,7 +68,8 @@
   border-radius: var(--mint-border-radius);
   height: 350px;
   box-sizing: border-box;
-  padding: 1.5em 0 3em;
+  padding: 2.5em 0 3em;
+  margin: 1em auto;
   max-width: 1110px;
 }
 
